# apps/backend/src/domain/progression/dto/index.ts
@@ -1,6 +1,7 @@
 export * from "./SelectClassDto.js";
 export * from "./SelectRaceDto.js";
 export * from "./UnlockRankDto.js";
+export * from "./SelectFirstTalentDto.js";
 export * from "./ClassMetadataDto.js";
 export * from "./RaceMetadataDto.js";
 export * from "./CharacterStatsDto.js";
